HTML and JS done, only need to finish CSS.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="row">
-            <textarea class="w-100" readonly id="password-box" placeholder="Your Secure Password"></textarea>
+            <textarea readonly class="w-100" id="password-box" placeholder="Your Secure Password"></textarea>
         </div>
 
         <div class="row">
@@ -31,7 +31,7 @@
             </div>
 
             <div class="col-6 justify-content-center">
-                <button type="button" class="btn btn-secondary btn-lg" id="generate-btn">Copy to Clipboard</button>
+                <button type="button" class="btn btn-secondary btn-lg" id="copy-btn">Copy to Clipboard</button>
             </div>
         </div>
     </div>
