added some bootstrap formatting in HTML

--- a/index.html
+++ b/index.html
@@ -22,15 +22,16 @@
         </div>
 
         <div class="row">
-            <textarea readonly class="w-100" id="password-box" placeholder="Your Secure Password"></textarea>
+            <textarea readonly class="w-100 text-center" id="password-box"
+                placeholder="Your Secure Password"></textarea>
         </div>
 
         <div class="row">
-            <div class="col-6 justify-content-center">
+            <div class="col-6 text-center">
                 <button type="button" class="btn btn-primary btn-lg" id="generate-btn">Generate Password</button>
             </div>
 
-            <div class="col-6 justify-content-center">
+            <div class="col-6 text-center">
                 <button type="button" class="btn btn-secondary btn-lg" id="copy-btn">Copy to Clipboard</button>
             </div>
         </div>
