added a bit more bootstrap formatting in HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
             <h1>Password Generator</h1>
         </div>
 
-        <div class="row">
+        <div class="row border-bottom">
             <h2>Generate a Password</h2>
         </div>
 
@@ -26,7 +27,7 @@
                 placeholder="Your Secure Password"></textarea>
         </div>
 
-        <div class="row">
+        <div class="row pt-3 mb-5 border-top">
             <div class="col-6 text-center">
                 <button type="button" class="btn btn-primary btn-lg" id="generate-btn">Generate Password</button>
             </div>
