added a container to make a card-like container for content

--- a/index.html
+++ b/index.html
@@ -17,25 +17,31 @@
         <div class="row justify-content-center">
             <h1>Password Generator</h1>
         </div>
-
-        <div class="row border-bottom">
-            <h2>Generate a Password</h2>
-        </div>
-
         <div class="row">
-            <textarea readonly class="w-100 text-center" id="password-box"
-                placeholder="Your Secure Password"></textarea>
-        </div>
+            <div class="col-12 p-5 content-container">
+                <div class="row border-bottom">
+                    <h2>Generate a Password</h2>
+                </div>
 
-        <div class="row pt-3 mb-5 border-top">
-            <div class="col-6 text-center">
-                <button type="button" class="btn btn-primary btn-lg" id="generate-btn">Generate Password</button>
+                <div class="row">
+                    <textarea readonly class="w-100 text-center" id="password-box"
+                        placeholder="Your Secure Password"></textarea>
+                </div>
+
+                <div class="row pt-3 mb-5 border-top">
+                    <div class="col-6 text-center">
+                        <button type="button" class="btn btn-primary btn-lg" id="generate-btn">Generate
+                            Password</button>
+                    </div>
+
+                    <div class="col-6 text-center">
+                        <button type="button" class="btn btn-secondary btn-lg" id="copy-btn">Copy to Clipboard</button>
+                    </div>
+                </div>
             </div>
 
-            <div class="col-6 text-center">
-                <button type="button" class="btn btn-secondary btn-lg" id="copy-btn">Copy to Clipboard</button>
-            </div>
         </div>
+
     </div>
 
     <script src="./script.js"></script>
